--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 header{
     background-color: #2D25A0;
     padding-top: 20px;
+    padding-bottom: 20px;
 }
 nav{
     display: flex;
@@ -132,8 +133,8 @@ nav a{
 .player p{
     font-size: 16px;
     color:#6C6C6C;
-    ;
 }
+
 
 /* --------Match Summary-------- */
 
@@ -198,4 +199,182 @@ footer>div a{
 }
 footer>div a:hover{
     color: #10437A;
+}
+
+/* Respopnsive Section */
+
+@media only screen and (max-width: 600px) {
+    body{
+        margin: 0;
+        padding: 0;
+        background-color: #FFFFFF;
+        font-family: 'Poppins', sans-serif;
+    /* ---------------------
+        Top  header CSS
+        -------------------- */
+    }
+    header{
+        background-color: #2D25A0;
+        padding-top: 10px;
+        padding-bottom: 20px;
+    }
+    nav{
+        display: none;  
+    }
+    /* ---------------------
+        Top  Section CSS
+        -------------------- */
+    
+        .common-section{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .container{
+            width: auto;
+            margin:0 auto;
+            text-align: center;
+        }
+        .container h1{
+            font-weight: bold;
+            font-size: 44px;
+            line-height: 80px;
+            color: #FFFFFF;
+        }
+        .container .title{
+            color:#0A0826;
+            font-size: 48px;
+            line-height: 80px;
+        }
+        .container a{
+            text-decoration: none;
+            background-color:#E02C6D;
+            color: #FFFFFF;
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 500;
+            padding: 10px 24px;  
+        }
+        .container a:hover{
+            border: 2px solid #69C1FC;
+        }
+        .container a i{
+            margin: 5px;
+        }
+        .container p{
+            color:#6C6C6C;
+            font-size: 16px;
+        }
+        .container img{
+            margin-top: 20px;
+            width: 100%;
+            transition: transform 1.5s;
+        }
+        .container img:hover{
+            transform: rotate(360deg);
+            border: 2px solid #69C1FC;
+        }
+    /* ---------------------
+        Grid Section
+        -------------------- */
+    .grid-section {
+        display: flex;
+        flex-direction: column;
+        margin:0;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .players{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-row-gap: 30px;
+        text-align: center;
+        width: auto;
+        justify-content: center;
+        margin: 0;
+    }
+    .player{
+        width: 330px;
+        height: 474px;
+        box-shadow:0px 0px 40px 0px #00000026; 
+    }
+    .player:hover{
+        border: 2px solid #69C1FC;
+    }
+    .player img{
+        width: 300px;
+        height: 256px;
+        margin-top: 15px;
+    }
+    .player h2{
+        font-size: 28px;
+        color:#18191F;
+    }
+    .player p{
+        font-size: 16px;
+        color:#6C6C6C;
+    }
+    
+    
+    /* --------Match Summary-------- */
+    
+    .match-summary{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 2px solid skyblue;
+        margin:0;
+        margin-top: 50px;
+        margin-bottom:50px ;
+        
+    }
+    .match-summary:hover{
+        box-shadow: 2px 2px 10px skyblue;
+    }
+    .items{
+        padding:10px 20px;
+    }
+    .items img{
+        width: 41px;
+        height: 42px;
+    }
+    .info{
+        text-align: center;
+        line-height: 15px;
+        align-content: center;
+    } 
+    .info a{
+        text-decoration: none;
+        font-size: 12px;
+        text-align: center;
+        color: rgb(17, 167, 226);
+    }
+    .info p{
+        font-size: 12px;
+    }
+    
+    /* -------Footer Area------- */
+    
+    footer{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer>div a{
+        font-size: 30px;
+        border: 1px solid skyblue;
+        border-radius: 10%;
+        color: skyblue;
+        padding: 5px;
+    }
+    footer>div a:hover{
+        color: #10437A;
+    }
+    footer>div img{
+        margin-bottom: 10px;
+        height:50px ;
+        width: 200px;
 }
